--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <select class="form-select opacity-50 select" aria-label="Default select example" style="width: 8rem;">
                 <option value="1">English</option>
                 <option value="2">Hindi</option>
+                <option value="3">marathi</option>
               </select>
             </div>
         </div>
